--- a/UWP-Music-Library/MainPage.xaml
+++ b/UWP-Music-Library/MainPage.xaml
@@ -29,6 +29,20 @@
                    RelativePanel.RightOf="HamburgerButton"
                    Width="45"
                    Height="45"/>
+
+            <Button Name="Login"
+					RelativePanel.AlignRightWithPanel="True"
+					FontFamily="Segoe MDL2 Assets"
+					Content="&#xE13D;"
+					Width="45"
+                    Height="45"/>
+
+            <Button Name="Register"
+					RelativePanel.LeftOf="Login"
+					FontFamily="Segoe MDL2 Assets"
+					Content="&#xE1E2;"
+					Width="45"
+                    Height="45"/>
         </RelativePanel>
 
         <!-- SplitView contains the stuff -->
@@ -54,7 +68,8 @@
                                 FontFamily="Segoe MDL2 Assets"
 					            Content="&#xE80F;"
 					            Width="45"
-                                Height="45"/>
+                                Height="45"
+                                Click="Home_Click"/>
                             <TextBlock Text="Home" FontSize="20" VerticalAlignment="Center"/>
                         </StackPanel>
 
@@ -63,7 +78,8 @@
                                 FontFamily="Segoe MDL2 Assets"
 					            Content="&#xE71E;"
 					            Width="45"
-                                Height="45"/>
+                                Height="45"
+                                Click="Search_Click"/>
                             <TextBlock Text="Search" FontSize="20" VerticalAlignment="Center"/>
                         </StackPanel>
 
@@ -72,7 +88,8 @@
                                 FontFamily="Segoe MDL2 Assets"
 					            Content="&#xE8F1;"
 					            Width="45"
-                                Height="45"/>
+                                Height="45"
+                                Click="YourLibrary_Click"/>
                             <TextBlock Text="Your Library" FontSize="20" VerticalAlignment="Center"/>
                         </StackPanel>
                     </ListView>
@@ -85,7 +102,8 @@
                                 FontFamily="Segoe MDL2 Assets"
 					            Content="&#xE710;"
 					            Width="45"
-                                Height="45"/>
+                                Height="45"
+                                Click="CreatePlaylist_Click"/>
                             <TextBlock Text="Create Playlist" FontSize="20" VerticalAlignment="Center"/>
                         </StackPanel>
 
@@ -94,14 +112,15 @@
                                 FontFamily="Segoe MDL2 Assets"
 					            Content="&#xE8E1;"
 					            Width="45"
-                                Height="45"/>
+                                Height="45"
+                                Click="LikedSongs_Click" />
                             <TextBlock Text="Liked Songs" FontSize="20" VerticalAlignment="Center"/>
                         </StackPanel>
                     </ListView>
                 </Grid>
             </SplitView.Pane>
 
-            <!-- Displays cover image while music plays -->
+            <!-- Displays cover image and music info -->
             <SplitView.Content>
                 <ListView Name="MusicListView"
                           IsItemClickEnabled="True"
@@ -110,7 +129,8 @@
                           CanReorderItems="False"
                           SelectionMode="Single"
                           FlowDirection="LeftToRight"
-                          ItemsSource="{x:Bind SongsList}">
+                          ItemsSource="{x:Bind SongsList}"
+                          ItemClick="MusicListView_ItemClick">
                     <ListView.ItemTemplate>
                         <DataTemplate x:DataType="model:Song">
                             <StackPanel Orientation="Horizontal">
@@ -136,9 +156,11 @@
             <MediaElement Name="MyMediaElement" AutoPlay="True" AreTransportControlsEnabled="True">
                 <MediaElement.TransportControls>
                     <MediaTransportControls IsFastForwardButtonVisible="True" IsFastForwardEnabled="True"
-                                        IsStopButtonVisible="True" IsStopEnabled="True"
-                                        IsFastRewindButtonVisible="True" IsFastRewindEnabled="True"                                        
-                                        IsPlaybackRateButtonVisible="True" IsPlaybackRateEnabled="True" />
+                                            IsStopButtonVisible="True" IsStopEnabled="True"
+                                            IsFastRewindButtonVisible="True" IsFastRewindEnabled="True"
+                                            IsFullWindowButtonVisible="True" IsFullWindowEnabled="True"
+                                            IsNextTrackButtonVisible="True" IsPreviousTrackButtonVisible="True"
+                                            IsRepeatButtonVisible="True" IsRepeatEnabled="True" />
                 </MediaElement.TransportControls>
             </MediaElement>
         </SplitView>
